--- a/frontend/src/components/Dashboard.scss
+++ b/frontend/src/components/Dashboard.scss
@@ -222,16 +222,15 @@ a {
 }
 
 .main-header {
-  position: relative;
-  margin-top: 40px;
+ position: relative;
+  margin-top: 40px; // Reduced top margin for mobile
   display: flex;
   justify-content: space-between;
-  height: 250px;
   color: $color-white;
   background-size: cover;
   background-image: url("https://img.freepik.com/free-vector/medical-healthcare-blue-color_1017-26807.jpg?t=st=1737785173~exp=1737788773~hmac=3ba27480b0100f16861e64b6cc958252bcaad92dbb858d8193834ca2b86fdcab&w=1060");
-  margin-bottom: 20px;
-
+  margin-bottom: 10px; // Reduced bottom margin for mobile
+  
   &__intro-wrapper {
     display: flex;
     flex: 1;
